--- a/GUI - WPF/App.xaml
+++ b/GUI - WPF/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Minesweeper_3D_WPF.App"
+﻿<Application x:Class="Minesweeper3D.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Minesweeper_3D_WPF"
+             xmlns:local="clr-namespace:Minesweeper3D.WPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
